# NCAE-Tooling

./: README.md
BackUps/: 00_Master.ps1  00_master.sh  01_Backup-Binaries.ps1  01_backup_binaries.sh  07_backup_mysql.sh  README.md
BackUps/Linux/: 00_master.sh  02_backup_pam.sh  04_backup_smb.sh  05_backup_webserver.sh  06_backup_webcontent.sh  08_backup_postgres.sh
BackUps/Windows/: 00_Master.ps1  02_Backup-SSH.ps1  03_Backup-SMB.ps1  04_Backup-WebServer.ps1  06_Backup-MySQL.ps1  07_Backup-Postgres.ps1  README.md
Backups/Linux/: 00_master.sh  03_backup_sshd.sh  05_backup_webserver.sh  06_backup_webcontent.sh  09_backup_NCAEDB.sh  ncae_backup_manager.sh
Backups/Windows/: 00_Master.ps1  02_Backup-SSH.ps1  03_Backup-SMB.ps1  05_Backup-WebContent.ps1
Business/: IR-Template.docx  IR-Template.odt  Inject-Template.docx  Inject-Template.odt  copy.sh  test.xml
Linux/: goinstall.sh  readme.md
Linux/Hopefully_Final_SSH-SMB/: README.md  add_scoring_pubkeys.sh  backup.sh  remote_ssh_setup.sh  remove_bad_ssh_keys.sh  scoring_ssh_setup.sh  smb_add_users.sh  smb_iptables.sh  smb_setup.sh  ssh_harden.sh
Linux/SMB/: README.md  smb_harden.sh  smb_recover.sh  smb_threat_hunt.sh
Router/: CentOS_config.sh  RouterOS_confiig.rsc
SIEM/: agent.conf  local_decoders.xml  local_rules.xml
Windows/Binaries/PurpleBaron/: .gitignore  Cargo.toml  build.sh  rust-anaylzer.toml  windows-yara.tar.xz
Windows/Binaries/PurpleBaron/.cargo/: config.toml
Windows/Binaries/PurpleBaron/release-builds/: README.txt
Windows/Binaries/PurpleBaron/src/: main.rs  notifications.rs  yara.rs
(+105 files in other folders)
