[package]
name = "redbaron"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
chrono = "0.4.43"
env_logger = { version = "0.11.9", default-features = false, features = ["auto-color", "color"] }
log = "0.4.29"
rust-embed = { version = "8.11.0", features = ["compression", "include-exclude"] }
serde_json = "1.0.149"
windows = { version = "0.61.3", features = ["Win32_Security", "Win32_System_Diagnostics_Debug", "Win32_System_Memory", "Win32_System_ProcessStatus", "Win32_System_Threading"] }
yara-x = "1.13.0"
